Fix overflow in mobile

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,6 +5,7 @@
   width: 40%;
   margin-left: 30%;
   padding: 2rem 0;
+  overflow-x: hidden;
 
   & > div {
     padding: 1rem 0;
